# Translate-AI

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
backend/: pipeline.py
backend/agents/: __init__.py  language_detector.py  translator.py
backend/db/: __init__.py  sqlite.py
backend/llm/: __init__.py  agno_qubrid_model.py  qubrid_client.py
backend/ocr/: __init__.py  ocr.py
frontend/: base_config.py  ui_components.py
